testsuite/tests/parser/should_compile/T20385S.hs
{-# LANGUAGE ScopedTypeVariables #-}
{-# LANGUAGE RecursiveDo #-}
module Main where

main = pure ()

foo :: forall a. a -> a
foo x = mdo (x :: a)
